--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <p>Slapa Blapa &nbsp; 4 real</p>
     <script src="main.js"></script>
   </body>
 </html>
