feat: add html text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>Slapa Blapa &nbsp; 4 real</p>
+    <a href="" title="Example indeed">WUB WUB</a>
     <script src="main.js"></script>
   </body>
 </html>
