feat: added table

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="" title="Example indeed">WUB WUB</a>
+    <table>
+      <tr>
+        <th>Cats</th>
+        <th>Birds</th>
+        <th>Fish</th>
+      </tr>
+
+      <tr>
+        <td>Tiger</td>
+        <td>Humming bird</td>
+        <td>Salmon</td>
+      </tr>
+
+      <tr>
+        <td>Panther</td>
+        <td>Robin</td>
+        <td>Tuna</td>
+      </tr>
+
+      <tr>
+        <td>Lion</td>
+        <td>Blue jay</td>
+        <td>Talopia</td>
+      </tr>
+    </table>
     <script src="main.js"></script>
   </body>
 </html>
