--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <table>
+      <caption>
+        Dinosaurs in the Jurassic period
+      </caption>
       <tr>
         <th>Cats</th>
         <th>Birds</th>
